--- a/index.html
+++ b/index.html
@@ -60,26 +60,14 @@
 
 
 
-<!--<h1>Smart Chatbot </h1>-->
-<!--<h3>Hiện tại, Huyền My có thể trả lời về: </h3>-->
-<!--<div><img src='images/favicon.png' width='20px' height='20px' class='circular&#45;&#45;square' style='float: left;' />- Giới thiệu về NEU</b></div>-->
-<!--<div><img src='images/favicon.png' width='20px' height='20px' class='circular&#45;&#45;square' style='float: left;' />- Tải mẫu đơn xác nhận là SV</b></div>-->
-<!--<div><img src='images/favicon.png' width='20px' height='20px' class='circular&#45;&#45;square' style='float: left;' />- Điều kiện dự thi học phần</b></div>-->
-<!--<div><img src='images/favicon.png' width='20px' height='20px' class='circular&#45;&#45;square' style='float: left;' />- Các thông báo mới nhất của phòng đào tạo</b></div>-->
-<!--<div><img src='images/favicon.png' width='20px' height='20px' class='circular&#45;&#45;square' style='float: left;' />- Thời tiết Hà Nội, Sài Gòn</b></div>-->
-<!--<div><img src='images/favicon.png' width='20px' height='20px' class='circular&#45;&#45;square' style='float: left;' />- Tìm kiếm tài nguyên tại trang NEU.EDU.VN</b></div>-->
-<!--<div><img src='images/favicon.png' width='20px' height='20px' class='circular&#45;&#45;square' style='float: left;' />- Test google form</b></div>-->
-<!--<div><img src='images/favicon.png' width='20px' height='20px' class='circular&#45;&#45;square' style='float: left;' />- chào hỏi, tạm biệt, cám ơn, khen, chê, xin lỗi, nhận ra tên người dùng.</b></div>-->
-<!--<div><img src='images/favicon.png' width='20px' height='20px' class='circular&#45;&#45;square' style='float: left;' />- Hồ Chí Minh là ai</b></div>-->
-<!--<div><img src='images/favicon.png' width='20px' height='20px' class='circular&#45;&#45;square' style='float: left;' />- Buộc thôi </b></div>-->
-<!--<div><img src='images/favicon.png' width='20px' height='20px' class='circular&#45;&#45;square' style='float: left;' />- Hạng tốt nghiệp</b></div>-->
-<!--<div><img src='images/favicon.png' width='20px' height='20px' class='circular&#45;&#45;square' style='float: left;' />- Chuẩn đầu ra ngoại ngữ</b></div>-->
-<!--<div><img src='images/favicon.png' width='20px' height='20px' class='circular&#45;&#45;square' style='float: left;' />- Chuẩn đầu ra tin học</b></div>-->
-<!--<div><img src='images/favicon.png' width='20px' height='20px' class='circular&#45;&#45;square' style='float: left;' />- Chuyển trường</b></div>-->
-<!--<div><img src='images/favicon.png' width='20px' height='20px' class='circular&#45;&#45;square' style='float: left;' />- Điều kiện xét tốt nghiệp</b></div>-->
-<!--<div><img src='images/favicon.png' width='20px' height='20px' class='circular&#45;&#45;square' style='float: left;' />- Điểm chuyên cần</b></div>-->
-<!--<div><img src='images/favicon.png' width='20px' height='20px' class='circular&#45;&#45;square' style='float: left;' />- Hát một bài</b></div>-->
-<!--<div><img src='images/favicon.png' width='20px' height='20px' class='circular&#45;&#45;square' style='float: left;' />- ...</b></div>-->
+<h1>Smart Chatbot </h1>
+<h3>Hiện tại,  có thể trả lời về: </h3>
+<div><img src='images/favicon.png' width='20px' height='20px' class='circular--square' style='float: left;' />- Chào hỏi</b></div>
+<div><img src='images/favicon.png' width='20px' height='20px' class='circular--square' style='float: left;' />- Thông tin về Thái Minh </b></div>
+<div><img src='images/favicon.png' width='20px' height='20px' class='circular--square' style='float: left;' />- Thái Minh bán sản phẩm gì </b></div>
+<div><img src='images/favicon.png' width='20px' height='20px' class='circular--square' style='float: left;' />- Sản phẩm X là gì?</b></div>
+<div><img src='images/favicon.png' width='20px' height='20px' class='circular--square' style='float: left;' />- Ở quận A, muốn mua sản phẩm X thì mua ở đâu?</b></div>
+<div><img src='images/favicon.png' width='20px' height='20px' class='circular--square' style='float: left;' />- ...</b></div>
 
 
 
