--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 <h1>Smart Chatbot </h1>
 <h3>Hiện tại, Thái Minh chatbot có thể trả lời về: </h3>
 <div><img src='images/favicon.png' width='20px' height='20px' class='circular--square' style='float: left;' />- Chào hỏi</b></div>
-<div><img src='images/favicon.png' width='20px' height='20px' class='circular--square' style='float: left;' />- Hỏi tên (Who is this) </b></div>
+<div><img src='images/favicon.png' width='20px' height='20px' class='circular--square' style='float: left;' />- Hỏi tên (Who's that?) </b></div>
 <div><img src='images/favicon.png' width='20px' height='20px' class='circular--square' style='float: left;' />- Thông tin về Thái Minh </b></div>
-<div><img src='images/favicon.png' width='20px' height='20px' class='circular--square' style='float: left;' />- Thái Minh bán sản phẩm gì </b></div>
+<div><img src='images/favicon.png' width='20px' height='20px' class='circular--square' style='float: left;' />- Thái Minh bán sản phẩm gì?</b></div>
 <div><img src='images/favicon.png' width='20px' height='20px' class='circular--square' style='float: left;' />- Sản phẩm X là gì?</b></div>
 <div><img src='images/favicon.png' width='20px' height='20px' class='circular--square' style='float: left;' />- Sản phẩm X có công dụng gì?</b></div>
 <div><img src='images/favicon.png' width='20px' height='20px' class='circular--square' style='float: left;' />- Ở quận A, muốn mua sản phẩm X thì mua ở đâu? (Mua sản phẩm của công ty ở đâu? Ở quận A thì mua hàng chỗ nào gần nhất?,...)</b></div>
