--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 <div><img src='images/favicon.png' width='20px' height='20px' class='circular--square' style='float: left;' />- Thái Minh bán sản phẩm gì?</b></div>
 <div><img src='images/favicon.png' width='20px' height='20px' class='circular--square' style='float: left;' />- Sản phẩm X là gì?</b></div>
 <div><img src='images/favicon.png' width='20px' height='20px' class='circular--square' style='float: left;' />- Sản phẩm X có công dụng gì?</b></div>
+<div><img src='images/favicon.png' width='20px' height='20px' class='circular--square' style='float: left;' />- Sản phẩm đang khuyến mãi?</b></div>
 <div><img src='images/favicon.png' width='20px' height='20px' class='circular--square' style='float: left;' />- Ở quận A, muốn mua sản phẩm X thì mua ở đâu? (Mua sản phẩm của công ty ở đâu? Ở quận A thì mua hàng chỗ nào gần nhất?,...)</b></div>
 <div><img src='images/favicon.png' width='20px' height='20px' class='circular--square' style='float: left;' />- ...</b></div>
 
