--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <div><img src='images/favicon.png' width='20px' height='20px' class='circular--square' style='float: left;' />- Ở quận A, muốn mua sản phẩm X thì mua ở đâu? (Mua sản phẩm của công ty ở đâu? Ở quận A thì mua hàng chỗ nào gần nhất?,...)</b></div>
 <div><img src='images/favicon.png' width='20px' height='20px' class='circular--square' style='float: left;' />- ...</b></div>
 
-
+<h4>Hiểu ngữ cảnh và diễn biến hành động theo thời gian: Ví dụ, nếu vừa chào bot xong rồi chào lại, chatbot sẽ nhớ là khách vừa chào (Chứ không chỉ đơn giản tham chiếu 1vs1 giữa câu hỏi và câu trả lời)</h4>
 
 <div class="container">
     <div id="chaticon" style="border:0px; position:fixed; bottom:10px; right:25px;">
