--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 
 <h1>Smart Chatbot </h1>
-<h3>Hiện tại, Thái Minh chatbot có thể trả lời về: </h3>
+<h3>Thái Minh chatbot còn ít dữ liệu và đang được bổ sung, hiện có thể trả lời về: </h3>
 <div><img src='images/favicon.png' width='20px' height='20px' class='circular--square' style='float: left;' />- Chào hỏi</b></div>
 <div><img src='images/favicon.png' width='20px' height='20px' class='circular--square' style='float: left;' />- Hỏi tên (Who's that?) </b></div>
 <div><img src='images/favicon.png' width='20px' height='20px' class='circular--square' style='float: left;' />- Thông tin về Thái Minh </b></div>
